Added DOM functionalities and dynamic data rendering

--- a/index.html
+++ b/index.html
@@ -120,44 +120,7 @@
         <div
           class="d-flex offer-slider overflow-x-scroll column-gap-3"
           id="offers-slider"
-        >
-          <div
-            class="offer-banner"
-            style="
-              background-image: url('https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_850,h_504/rng/md/carousel/production/a879b95a1e54915c07037f2a2af90ed2');
-            "
-          ></div>
-          <div
-            class="offer-banner"
-            style="
-              background-image: url('https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_850,h_504/rng/md/carousel/production/4588eea459c19a835bac4f75e44267b5');
-            "
-          ></div>
-          <div
-            class="offer-banner"
-            style="
-              background-image: url('https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_850,h_504/rng/md/carousel/production/8838dcd5481a6cfc45567c900c7c0f26');
-            "
-          ></div>
-          <div
-            class="offer-banner"
-            style="
-              background-image: url('https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_850,h_504/rng/md/carousel/production/90b990bd1dc16bba234f5002627f71d3');
-            "
-          ></div>
-          <div
-            class="offer-banner"
-            style="
-              background-image: url('https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_850,h_504/rng/md/carousel/production/930446fda5aed5c1ceac0f058971f851');
-            "
-          ></div>
-          <div
-            class="offer-banner"
-            style="
-              background-image: url('https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_850,h_504/rng/md/carousel/production/3180d5bd4606cac4ee158eead46b0540');
-            "
-          ></div>
-        </div>
+        ></div>
       </div>
       <!-- CATEGORIES SECTION -->
       <div class="sliding-section my-5">
@@ -206,125 +169,14 @@
         <div
           class="d-flex restaurants-slider overflow-x-scroll column-gap-3"
           id="restaurants-slider"
-        >
-          <div class="restaurant-card">
-            <div class="card-header mb-2">
-              <img
-                class="image"
-                src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_660/usj6ahnbc4lvrmxlzuee"
-                alt="restaurant-image"
-              />
-              <div class="overlay">
-                <div class="content"></div>
-                <div class="content"></div>
-                <h6 style="color: #ffffff">$125 OFF ABOVE $122</h6>
-              </div>
-            </div>
-            <div class="card-body">
-              <h5 class="restaurant-title">Blue Nile</h5>
-              <span class="d-flex align-items-center ratings"
-                ><img
-                  class="ratings-icon me-2"
-                  src="https://icons-for-free.com/iconfiles/png/512/green+star+icon-1320183463950302962.png"
-                />4.5</span
-              >
-              <p class="cuisine">Indian, Chinese</p>
-              <p class="restaurant-area">Camp Area</p>
-            </div>
-          </div>
-          <div class="restaurant-card">
-            <div class="card-header mb-2">
-              <img
-                class="image"
-                src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_660/ee5f8e06b300efc07c9fe3f4df40dfc4"
-                alt="restaurant-image"
-              />
-              <div class="overlay">
-                <div class="content"></div>
-                <div class="content"></div>
-                <h6 style="color: #ffffff">$125 OFF ABOVE $122</h6>
-              </div>
-            </div>
-            <div class="card-body">
-              <h5 class="restaurant-title">MCDonald's</h5>
-              <span class="d-flex align-items-center ratings"
-                ><img
-                  class="ratings-icon me-2"
-                  src="https://icons-for-free.com/iconfiles/png/512/green+star+icon-1320183463950302962.png"
-                />4.5</span
-              >
-              <p class="cuisine">Burgers, Beverages, Cafe, Dessert</p>
-              <p class="restaurant-area">Camp Area</p>
-            </div>
-          </div>
-        </div>
+        ></div>
       </div>
+      <div class="divider"></div>
       <!-- FEATURED MENU TODAY -->
-      <div class="featured-menu-section">
-        <h4 class="mb-3">Featured Menu Items</h4>
+      <div class="featured-menu-section my-5">
+        <h4 class="mb-2">Featured Menu Items</h4>
         <div class="menu-items">
-          <div class="row">
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
-              <div class="card food-card">
-                <div class="card-body d-flex food-card-body">
-                  <div class="content-section">
-                    <h6 class="title">Tomato Soup</h6>
-                    <p class="pricing">270 Rs</p>
-                    <p class="details">
-                      Serves 1 | Delicious and authentic taste
-                    </p>
-                  </div>
-                  <div class="image-section">
-                    <img
-                      class="food-image rounded mb-2"
-                      src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_208,h_208,c_fit/rqwiwppdmaxg4qsmgzwq"
-                    />
-                    <button type="submit" class="btn">ADD</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
-              <div class="card food-card">
-                <div class="card-body d-flex food-card-body">
-                  <div class="content-section">
-                    <h6 class="title">Tomato Soup</h6>
-                    <p class="pricing">270 Rs</p>
-                    <p class="details">
-                      Serves 1 | Delicious and authentic taste
-                    </p>
-                  </div>
-                  <div class="image-section">
-                    <img
-                      class="food-image rounded mb-2"
-                      src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_208,h_208,c_fit/rqwiwppdmaxg4qsmgzwq"
-                    />
-                    <button type="submit" class="btn">ADD</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
-              <div class="card food-card">
-                <div class="card-body d-flex food-card-body">
-                  <div class="content-section">
-                    <h6 class="title">Tomato Soup</h6>
-                    <p class="pricing">270 Rs</p>
-                    <p class="details">
-                      Serves 1 | Delicious and authentic taste
-                    </p>
-                  </div>
-                  <div class="image-section">
-                    <img
-                      class="food-image rounded mb-2"
-                      src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_208,h_208,c_fit/rqwiwppdmaxg4qsmgzwq"
-                    />
-                    <button type="submit" class="btn">ADD</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="row" id="food-menu-container"></div>
         </div>
       </div>
     </section>
