Added Login page and form validation

--- a/index.html
+++ b/index.html
@@ -90,6 +90,16 @@
                       Cart</a
                     >
                   </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link d-flex align-items-center active"
+                      aria-current="page"
+                      href="./login.html"
+                    >
+                      <i class="bx bxs-user-circle mx-3"></i>
+                      Login</a
+                    >
+                  </li>
                 </ul>
               </div>
             </div>
